<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoxDiary</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">你好</string>
	<string name="loading">加载中...</string>
	<string name="date_temp">2013年4月20日</string>
	<string name="time_temp">20:06</string>
	<string name="time_temp_zero">00:00:00</string>
	
	<!-- 安全相关的信息 -->
	<string name="secure_password_title">创建日记密码</string>
	<string name="secure_create_password">创建密码</string>
	<string name="secure_modify_password">修改密码</string>
	<string name="secure_reset_password">重设密码</string>
	
	<!-- 下拉刷新相关的信息 -->
	<string name="pull_to_refresh_state_pull">下拉刷新</string>
	<string name="pull_to_refresh_state_release">松开刷新</string>
	<string name="pull_to_refresh_state_refreshing">正在刷新...</string>
	<string name="pull_to_refresh_state_last_update_date">上一次刷新的时间是：%1$s</string>
	<string name="pull_to_refresh_state_loading_more">正在加载更多内容</string>
	<string name="pull_to_refresh_result">本次刷新总共添加%1$s条数据</string>
	
	<!-- 日记时间线 -->
	<string name="diary_line_add">写点什么</string>
	<string name="diary_line_delete_success">日记删除成功</string>
	<string name="diary_line_delete_comfirm">您确定要删除这篇日记？</string>
	
	<!-- 写日记的界面 -->
	<string name="diary_write_title">写日记</string>
	<string name="diary_write_left_words">%1$s字</string>
	<string name="diary_write_press_to_record">按下开始录音</string>
	<string name="diary_write_recording">正在录音中...</string>
	<string name="diary_write_words_hint">在这里输入日记的内容...</string>
	<string name="diary_write_words_empty">请输入日记的正文。</string>
	<string name="diary_write_save_success">日记保存成功。</string>
	<string name="diary_write_save_fail">非常抱歉，日记保存失败，原因如下：%1$s</string>
	<string name="diary_write_add_diary">写点什么吧...</string>
	<string name="diary_write_back_confirm_insert">您的日记还没有保存，您确定要放弃这篇日记的内容吗？</string>
	<string name="diary_write_back_confirm_update">您的日记还没有保存，您确定要放弃对这篇日记的修改吗？</string>
	<string name="diary_write_attachment_weather_tip">告诉我现在的天气情况吧：</string>
	<string name="diary_write_attachment_emotion_tip">告诉我你现在的心情吧：</string>
	<string name="diary_write_attachment_location_tip">告诉我你现在在哪吧：</string>
	<string name="diary_write_attachment_location_input_hint">自己输入...</string>
	<string name="diary_write_attachment_location_input_title">在下面输入你当前的位置</string>
	<string name="diary_write_attachment_location_default">没有留下地点信息</string>
	
	<!-- 组件相关 -->
	<string name="widget_dialog_positive">确定</string>
	<string name="widget_dialog_negative">取消</string>
	<string name="widget_confirm_dialog_title">警告</string>
	<string name="widget_input_dialog_title">在下面输入</string>
</resources>