<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_manage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/secure_password_manage_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_brown" />

    <RelativeLayout
        android:id="@+id/diary_line_header"
        style="@style/Header"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/diary_write_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pressed_bg"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_back_gray" />

            <ImageView
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@drawable/ic_launcher" />
        </LinearLayout>

        <TextView
            android:id="@+id/diary_line_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/secure_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/header_title_font" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/secure_password_manage_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/password_manage_create_password"
            style="@style/PositiveWidgetButton"
            android:layout_weight="1"
            android:text="@string/secure_create_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/password_manage_save_password"
            style="@style/CorrectWidgetButton"
            android:layout_weight="1"
            android:text="@string/secure_save_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/password_manage_reset_password"
            style="@style/WidgetButton"
            android:layout_weight="1"
            android:background="@drawable/dark_rectangle"
            android:text="@string/secure_reset_password" />
    </LinearLayout>
    
    <com.foxchan.foxdiary.core.widgets.locuspassword.LocusPasswordPanel
        android:id="@+id/password_manage_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/secure_password_manage_buttons"
        android:layout_below="@id/diary_line_header" />

</RelativeLayout>