<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/diary_landspace_bg_margin_top"
        android:layout_marginLeft="@dimen/diary_landspace_bg_margin_left"
        android:layout_marginRight="@dimen/diary_landspace_bg_margin_right"
        android:layout_marginTop="@dimen/diary_landspace_bg_margin_bottom"
        android:background="@drawable/diary_landscape_card_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/diary_landspace_bg_padding_bottom"
        android:paddingRight="@dimen/diary_landspace_bg_padding_right" >

        <LinearLayout
            android:id="@+id/diary_landscape_region"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/diary_landscape_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/diary_line_item_other_padding"
                        android:src="@drawable/weather_sunny" />

                    <Button
                        android:id="@+id/diary_landscape_voice_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/diary_line_item_left_padding"
                        android:layout_weight="1"
                        android:background="@drawable/blue_rectangle"
                        android:drawableRight="@drawable/icon_wave"
                        android:gravity="center"
                        android:padding="@dimen/diary_line_item_other_padding"
                        android:text="@string/time_temp_zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/h4" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="0.6dp"
                    android:layout_weight="1"
                    android:scrollY="0dp"
                    android:scrollbars="vertical" >

                    <ImageView
                        android:id="@+id/diary_landscape_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/demo_photo2" />
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:scrollY="0dp"
                    android:scrollbars="vertical" >

                    <TextView
                        android:id="@+id/diary_landscape_words"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/quotation"
                        android:gravity="top|left"
                        android:padding="10dip"
                        android:text="在这里显示日记的正文，在这里呢用户最多可以写140字的日记，或者说的更准确一点，应该叫做记事吧。其实这里还可以写的更长，不知道你知道不知道啊，呵呵。在这里显示日记的正文，在这里呢用户最多可以写140字的日记，或者说的更准确一点，应该叫做记事吧。其实这里还可以写的更长，不知道你知道不知道啊，呵呵。"
                        android:textColor="@color/diary_font_color"
                        android:textSize="@dimen/diary_line_content_font_size"
                        android:visibility="visible" />
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/diary_landscape_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/diary_line_item_other_padding"
                        android:drawableLeft="@drawable/icon_location"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/loading"
                        android:textColor="@color/diary_font_color"
                        android:textSize="@dimen/h5" />

                    <TextView
                        android:id="@+id/diary_landscape_datetime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="07月03日 12:26"
                        android:textColor="@color/diary_font_color"
                        android:textSize="@dimen/h5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="@dimen/diary_line_item_other_padding"
                android:layout_marginRight="@dimen/diary_line_item_other_padding"
                android:background="@color/blue_normal" />

            <ImageButton
                android:id="@+id/diary_landscape_delete"
                style="@style/IconButton"
                android:src="@drawable/button_diary_delete" />

            <ImageButton
                android:id="@+id/diary_landscape_edit"
                style="@style/IconButton"
                android:layout_toRightOf="@id/diary_landscape_delete"
                android:src="@drawable/button_diary_edit" />

            <ImageButton
                android:id="@+id/diary_landscape_share"
                style="@style/IconButton"
                android:layout_toRightOf="@id/diary_landscape_edit"
                android:src="@drawable/button_diary_share"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/diary_landscape_voice"
                style="@style/IconButton"
                android:layout_alignParentRight="true"
                android:background="@drawable/blue_rectangle"
                android:src="@drawable/icon_voice_white" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/diary_landscape_header"
        style="@style/Header"
        android:layout_alignParentTop="true"
        android:visibility="gone" >

        <ImageView
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/diary_landscape_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/date_temp"
            android:textColor="@color/white"
            android:textSize="@dimen/header_title_font" />

        <ImageButton
            android:id="@+id/diary_landscape_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_pressed_bg"
            android:src="@drawable/icon_white_add_64_normal" />

        <ImageView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dip"
            android:layout_marginRight="9dip"
            android:src="@drawable/loading"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>